--- a/src/pages/Contato.css
+++ b/src/pages/Contato.css
@@ -33,6 +33,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  margin-bottom: 20px;
   /* Se quiser um fundo diferente para a área de conteúdo principal: */
   /* background-color: var(--cor-fundo-pagina-contato); */
   /* padding: 20px; */ /* Adicione padding aqui se quiser um espaço interno geral */
@@ -41,7 +42,7 @@
 
 .titulo-contato {
   color: #004d25;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   padding: 10px 0;
   font-weight: 600;
   font-size: 1.7rem;
@@ -160,6 +161,7 @@
   cursor: pointer;
   transition: background-color 0.2s ease, color 0.2s ease, border-color 0.2s ease, transform 0.1s ease;
   text-align: center;
+  text-decoration: none;
 }
 
 .btn-suporte svg {
