--- a/src/pages/Inicio.css
+++ b/src/pages/Inicio.css
@@ -25,15 +25,17 @@
 
 .page-container {
   display: flex;
-  width: 100%;
   max-width: 1200px;
+  width: 100%;
   padding: 20px;
   gap: 20px;
   justify-content: center;
-  box-sizing: border-box;
 }
 
-
+.coluna-lateral {
+  flex-shrink: 0;
+  width: 20px;
+}
 
 .conteudo-principal {
   flex: 1;
@@ -487,3 +489,6 @@
         gap: 15px;
     }
 }
+
+
+
