--- a/src/pages/MinhaConta.css
+++ b/src/pages/MinhaConta.css
@@ -14,16 +14,13 @@
     --borda-raio-input: 6px; /* Raio de borda para inputs */
 }
 
-body {
-    color: var(--cor-texto-escuro);
-    background-color: var(--cor-fundo-claro);
-}
+
 
 .minha-conta-layout {
     display: flex;
     max-width: 1200px;
     width: 100%;
-    margin: 100px auto 40px;
+    margin: 90px auto ;
     padding: 0 20px;
     gap: 30px;
 }
@@ -56,7 +53,7 @@ body {
     align-items: center;
     gap: 12px;
     padding: 14px;
-    color: var(--cor-primaria);
+    color: #000000;
     cursor: pointer;
     border-radius: var(--borda-raio-padrao);
     transition: background 0.2s, color 0.2s;
